--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip wheel setuptools
       - name: Install invocation prerequisites
-        run: pip install -Ur requirements.txt
+        run: pip install -Ur ../requirements.txt
       - name: Get python version
         id: full-python-version
         shell: bash
