--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,6 @@ jobs:
             node-version: 20.x
             os: macos-13
     env:
-      SETUPTOOLS_USE_DISTUTILS: stdlib
       INVOKE_IS_CI_CD: 1
       SYSTEM_VERSION_COMPAT: "0"
     steps:
@@ -50,10 +49,23 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip wheel setuptools
+      - name: Upgrade pip and setuptools
+        run: |
+          python -m pip install --upgrade pip wheel
+          python -m pip install --upgrade setuptools
+      - name: Debug Python and pip info
+        run: |
+          python --version
+          pip --version
+          pip debug
       - name: Install invocation prerequisites
-        run: pip install -Ur ../requirements.txt
+        run: |
+          python -m pip install --verbose -Ur ../requirements.txt
+        env:
+          PIP_NO_BINARY: ":all:"  # Force source installations for macOS compatibility
+          SYSTEM_VERSION_COMPAT: "0"  # Already set globally but reinforcing here
+          ARCHFLAGS: "-arch x86_64"  # Help with compilation on macOS
+          MACOSX_DEPLOYMENT_TARGET: "10.14"  # Set minimum macOS version
       - name: Get python version
         id: full-python-version
         shell: bash
