--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,29 +17,10 @@ defaults:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
-
     strategy:
-      fail-fast: false
       matrix:
-        name:
-          [
-            "windows-py312",
-            "macos-py311",
-            "macos-py312",
-          ]
-
-        include:
-          - name: "windows-py312"
-            python: "3.12"
-            node-version: 20.x
-            os: windows-latest
-          - name: "macos-py311"
-            python: "3.11"
-            os: macos-13
-          - name: "macos-py312"
-            python: "3.12"
-            node-version: 20.x
-            os: macos-13
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.11", "3.12", "3.13"]
     env:
       INVOKE_IS_CI_CD: 1
       SYSTEM_VERSION_COMPAT: "0"
@@ -62,6 +43,7 @@ jobs:
         run: |
           python -m pip install --verbose -Ur ../requirements.txt
         env:
+          ${{ runner.os == 'Windows' && 'SETUPTOOLS_USE_DISTUTILS' || '' }}: ${{ runner.os == 'Windows' && 'stdlib' || '' }}
           PIP_NO_BINARY: ":all:"  # Force source installations for macOS compatibility
           SYSTEM_VERSION_COMPAT: "0"  # Already set globally but reinforcing here
           ARCHFLAGS: "-arch x86_64"  # Help with compilation on macOS
