--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,10 +26,10 @@ jobs:
       SYSTEM_VERSION_COMPAT: "0"
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
       - name: Upgrade pip and setuptools
         run: |
           python -m pip install --upgrade pip wheel
@@ -43,7 +43,7 @@ jobs:
         run: |
           python -m pip install --verbose -Ur ../requirements.txt
         env:
-          ${{ runner.os == 'Windows' && 'SETUPTOOLS_USE_DISTUTILS' || '' }}: ${{ runner.os == 'Windows' && 'stdlib' || '' }}
+          SETUPTOOLS_USE_DISTUTILS: ${{ runner.os == 'Windows' && 'stdlib' || null }}
           PIP_NO_BINARY: ":all:"  # Force source installations for macOS compatibility
           SYSTEM_VERSION_COMPAT: "0"  # Already set globally but reinforcing here
           ARCHFLAGS: "-arch x86_64"  # Help with compilation on macOS
